Fixed header layout and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body {
     margin: 0;
 }
+
+#header {
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: center;
+}
